syntax = "proto3";

package strims.vpn.v1;

option go_package = "github.com/MemeLabs/go-ppspp/pkg/apis/vpn/v1;vpn";
option java_package = "gg.strims.vpn.v1";
option swift_prefix = "SVN";

import "type/certificate.proto";

message NetworkAddress {
  bytes host_id = 1;
  uint32 port = 2;
}

message PeerInit {
  uint32 protocol_version = 1;
  strims.type.Certificate certificate = 2;
  string node_platform = 3;
  string node_version = 4;
}
